Fix "chrome scroll to top after fullscreen video" (dropped body "overflow" attr)

--- a/client/common/layout/layout.styl
+++ b/client/common/layout/layout.styl
@@ -13,7 +13,8 @@ body
   min-width 200px
   // Always show vertical scroll, to avoid small horizontal
   // jitter on change between short and long pages.
-  overflow-y scroll
+  // (!) Disabled because Chrome scroll page to top after fullscreen video.
+  //overflow-y scroll
 
   display flex
   flex-direction column
